# Muhammad-Iqbal-231011402668-Teknik-Kompilasi

./: Dokumentasi.md  LICENSE  README.md  install_unix.sh  install_windows.bat  main.py  pyproject.toml  uninstall_unix.sh  uninstall_windows.bat
docs/: AST.md  Grammar.md  Lexer.md  Optimization.md  Parser.md  Semantic.md  UserGuide.md
examples/: 01_halo_dunia.jog  02_variabel.jog  03_aritmatika.jog  04_kondisional.jog  05_while_loop.jog  06_for_loop.jog  07_fungsi.jog  08_faktorial.jog  09_fibonacci.jog  10_break_continue.jog  11_kalkulator.jog  12_bilangan_prima.jog  fibonacci1.jog
joglang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
joglang_compiler/: __init__.py  __main__.py  compiler.py  errors.py  lexer.py  parser.py  utils.py
tests/: test_compiler.py  test_lexer.py  test_optimizer.py  test_parser.py  test_semantic.py
