[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joglang"
version = "1.0.0"
description = "Mini Compiler untuk bahasa JogLang (Bahasa Jawa Dialek Yogyakarta)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "JogLang Team" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Compilers",
]

[project.scripts]
joglang = "joglang_compiler.cli:main"

[tool.setuptools.packages.find]
include = ["joglang_compiler", "joglang_compiler.*"]
